Avoid linear scans of the list of classes to sort
sortByAnnotation() keeps the classes still to be sorted in an
ArrayList that holds every requested name at least twice. Each step
removes the head of that list, which shifts the remainder, and both
the TreeSet comparator and the recursion guard search the list from
the start. Comparator.comparing() does not cache its key, so indexOf()
runs again on every comparison.

Use an ArrayDeque for the queue and keep each name's remaining
positions in a map so that the comparator and the guard become
constant time. The map reproduces List.indexOf() by exposing the first
position that has not been consumed, and List.contains() by holding a
key for as long as any position remains. The resulting order and the
reported cycle are therefore unchanged.

Measured as described in the preceding commit, and on top of the
caching it adds, this reduces the sort of 1000 auto-configurations from
5.0ms to 1.1ms. Measured on its own, without that caching, the change
is neutral to slightly slower because the class map scan then still
dominates.

Signed-off-by: Junggi Kim <kimjg2477@gmail.com>